<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <ImageView
        android:id="@+id/login_thumbnail"
        android:layout_width="@dimen/dimen_zero"
        android:layout_height="@dimen/login_thumbnail_height"
        android:src="@drawable/shoes_thumbnail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email_label"
        android:layout_width="@dimen/dimen_zero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_twenty"
        android:layout_marginEnd="@dimen/margin_twenty"
        android:text="@string/shoe_store"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="@dimen/login_textsize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_thumbnail"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/email_textview"
        style="@style/login_textview"
        android:layout_width="@dimen/dimen_zero"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_thirty"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email_label" />

    <EditText
        android:id="@+id/email"
        android:layout_width="@dimen/dimen_zero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_twenty"
        android:layout_marginEnd="@dimen/margin_twenty"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_textview" />

    <TextView
        android:id="@+id/pasword_textview"
        style="@style/login_textview"
        android:layout_width="@dimen/dimen_zero"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/label_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/label_password"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/label_password"
        android:layout_width="@dimen/dimen_zero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_twenty"
        android:layout_marginEnd="@dimen/margin_twenty"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pasword_textview" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="@dimen/dimen_zero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_twenty"
        android:layout_marginTop="@dimen/margin_twenty"
        android:layout_marginEnd="@dimen/margin_twenty"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_password" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="@dimen/dimen_zero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_twenty"
        android:layout_marginTop="@dimen/margin_ten"
        android:layout_marginEnd="@dimen/margin_twenty"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

</androidx.constraintlayout.widget.ConstraintLayout>