<?xml version="1.0" encoding="utf-8"?>

<!--Shoe Item-->
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="item_shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_ten"
                android:text="@string/name"
                android:textSize="@dimen/item_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{item_shoe.name}"
                android:textSize="@dimen/item_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/company_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_ten"
                android:text="@string/company"
                android:textSize="@dimen/item_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/company_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{item_shoe.company}"
                android:textSize="@dimen/item_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_ten"
                android:text="@string/size"
                android:textSize="@dimen/margin_twenty"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/item_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_ten"
                android:text="@string/description"
                android:textSize="@dimen/margin_twenty"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{item_shoe.description}"
                android:textSize="@dimen/item_text_size" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_one"
            android:layout_marginTop="@dimen/margin_five"
            android:layout_marginBottom="@dimen/margin_five"
            android:background="#000000" />
    </LinearLayout>
</layout>